# micro-rdk

./: Cargo.toml  Makefile
.github/workflows/: canary.yml  canary_summary.yml  publish.yml  test.yml
canary/: canary_test.py  daily_summary.py
examples/: Cargo.toml  build.rs  sdkconfig.defaults
examples/esp32/: esp32.rs  esp32_webrtc_with_config.rs
examples/esp32-with-cred/: esp32-server-with-cred.rs
micro-rdk/: Cargo.toml
micro-rdk-installer/: Cargo.toml  Cross.toml
micro-rdk-installer/.cargo/: config.toml
micro-rdk-installer/src/: error.rs  flash.rs  lib.rs  main.rs  partition_table.rs
micro-rdk-macros/src/: lib.rs
micro-rdk-macros/tests/: test.rs
micro-rdk-nmea/: Cargo.toml
micro-rdk-nmea-macros/src/: attributes.rs  composition.rs  lib.rs  utils.rs
micro-rdk-nmea/src/: lib.rs  sensors.rs
micro-rdk-nmea/src/messages/: pgns.rs
micro-rdk-nmea/src/parse_helpers/: enums.rs  errors.rs  mod.rs  parsers.rs
micro-rdk-server/: Cargo.toml
micro-rdk-server/esp32/: main.rs
micro-rdk/src/: lib.rs
src/: lib.rs
src/common/: adxl345.rs  analog.rs  app_client.rs  base.rs  board.rs  camera.rs  config.rs  data_collector.rs  digital_interrupt.rs  encoder.rs  generic.rs  gpio_motor.rs  gpio_servo.rs  grpc.rs  grpc_client.rs  i2c.rs  ina.rs  math_utils.rs  mod.rs  moisture_sensor.rs  motor.rs  movement_sensor.rs  mpu6050.rs  power_sensor.rs  registry.rs  robot.rs  sensor.rs  servo.rs  status.rs  wheeled_base.rs
src/esp32/: analog.rs  base.rs  board.rs  certificate.rs  dtls.rs  encoder.rs  entry.rs  exec.rs  i2c.rs  motor.rs  pin.rs  pulse_counter.rs  (+4 more)
(+70 files in other folders)
