[package]
name = "micro-rdk-nmea"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
micro-rdk = { path = "../micro-rdk", features = ["native"] }
micro-rdk-nmea-macros = { path = "../micro-rdk-nmea-macros" }
base64 = { workspace = true }
thiserror = { workspace = true }
